# maf

./: .gitignore  README.md  pyproject.toml
HelloWorldAgents/: HelloWorldAgents.csproj  Program.cs  (+1 more)
python/: README.md  maf01_chatcompletion.py  pyproject.toml  requirements.txt
python/echo-agent/: pyproject.toml  requirements.txt
python/hosted_agents/: .gitignore  README.md  azure.yaml  foundry_hosted.py  foundry_local_hosting.py  hosted_agent.py  main.py  pyproject.toml  requirements.txt
python/hosted_agents/agent/: Dockerfile  agent.py  agent.yaml
python/hosted_agents/agent/agent/: requirements.txt
python/hosted_agents/agents/ha01_echoagent/: .dockerignore  .env.example  .env.sample  Dockerfile  README.md  main.py  pyproject.toml
python/hosted_agents/agents/ha02-azureopenaiagent/: .env.example  .env.sample  Dockerfile  README.md  agent.yaml  deleteme.py  main.py  pyproject.toml  requirements.txt  test_hotels.py
python/hosted_agents/agents/ha02-azureopenaiagent/.foundry/: .deployment.json
python/hosted_agents/clients/: 01 - echo_agent.http  02 - Invoke AgentServer with Response_openaisdk.py  03 - Invoke AgentServer with Response_mafsdk.py  04 - Invoke HostedAgent_responses.py  README.md  main.py  pyproject.toml  requirements.txt
python/hosted_agents/deleteme/: azure.yaml  main.py  pyproject.toml
python/hosted_agents/deleteme/agent/: agent.yaml  main.py  pyproject.toml
python/hosted_agents/deleteme/src/hostedagent02-echoagent/: agent.yaml
python/hosted_agents/hostedagent01_echoagent/: Dockerfile  README.md  main.py  pyproject.toml
python/hosted_agents/hostedagent01_echoagent/_hosted/: Dockerfile  azure.yaml
python/hosted_agents/hostedagent01_echoagent/_hosted/agent/: Dockerfile  agent.yaml
python/hosted_agents/hostedagent01_supersimple/: README.md  agent.py  agent.yaml  main.py  pyproject.toml
python/hosted_agents/hostedagent03_echoagent/: azure.yaml
python/hosted_agents/hostedagent03_echoagent/agent/: Dockerfile
python/hosted_agents/hostedagent04_echoagent/: azure.yaml
python/hosted_agents/hostedagent04_echoagent/agent/: agent.yaml
python/hosted_agents/hostedagent04_echoagent/src/hostedagent04-echoagent/: agent.yaml  main.py
python/hosted_agents/hostedagent05_echoagent/: azure.yaml
python/hosted_agents/hostedagent05_echoagent/agent/: agent.yaml
python/hosted_agents/plain_agents/01-basic/: Dockerfile  main.py  requirements.txt
python/hosted_agents/plain_agents/02-traces_and_logs/: main.py
python/hosted_agents/scripts/: build_and_push.ps1  build_and_push.sh  generate_env.py
python/hosted_agents/src/local-hosting-agent-01/: Dockerfile  agent.yaml  local_agent.py  requirements.txt
python/hosted_agents/starter_kits/: README.md
python/hosted_agents/starter_kits/azd-ai-starter-basic/: README.md  azure.yaml
python/hosted_agents_bad/: main.py  pyproject.toml  requirements.txt
python/hosting_adapter_agents/: README.md  local_agent.py  main.py  pyproject.toml  requirements.txt
python/hosting_adapter_agents/agent/: agent.yaml
python/maf00_from_sk_to_maf/: README.md
python/maf00_from_sk_to_maf/maf/: main_old.py  pyproject.toml
python/maf00_from_sk_to_maf/sk/: README.md  main.py  main_full.py.txt  pyproject.toml
python/maf01/: 01 - MAF with OpenAI (travelagent).ipynb  02 - MAF with OpenAI and Session (Travelagent, Stateful Conversation).ipynb  03 - MAF with OpenAI (Configuration and Factory Patters, Stateful Conversation).ipynb  05 - MAF with AzureOpenAI and SearchTool.ipynb  08 - MAF with volatile workflow.ipynb  10 - FoundryV2 SDK.ipynb  Foundry v1 and v2 SDK, plus MAF .ipynb  README.md  local_agent.py  pyproject.toml  tests.ipynb
python/maf01_chatcompletion/: README.md  main.py  pyproject.toml  requirements.txt
python/maf02_responses/: README.md  maf01_response_stateless.py  maf02_response_stateful.py  maf03_response_stateful_foundryagent_v2.py  maf04_response_stateless_agent.py  main.py  main01_response_stateless.py  main02_response_stateful.py  main03_response_stateful_foundryagent_v2.py  main04_response_stateless_maf.py  main05_response_stateful_maf.py  main06_response_multimodal.py  multimodal_output_schema.json  overlay_bboxes.py  pyproject.toml  requirements.txt  system_message_multimodal.txt
python/maf03_aifoundry_v1/: README.md  main.py
python/maf04_aifoundry_v1/: README.md  main.py  pyproject.toml
python/maf04_aifoundry_v2/: README.md  main.py  pyproject.toml
python/maf05_hosted-agents_echo/: main.py  pyproject.toml  requirements.txt
python/maf05_hosted_agents/: main04_response_stateless_maf.py  where.md
python/maf05_hosted_agents/01-simplest_maf_agent/: README.md  main.py  pyproject.toml  requirements.txt
python/maf05_hosted_agents/02-echo_agent/: README_SETUP.md  main.py  requirements.txt
python/maf05_hosted_agents/02-echo_agent_simple/: main.py  pyproject.toml
python/maf05_hosted_agents/03-echo_agent_full/: README_SETUP.md  agent.yaml  main.py  pyproject.toml  requirements.txt
python/maf05_hosted_agents/agent_with_hosted_mcp/: main.py  pyproject.toml
python/maf05_hosted_agents/echo_agent/: main.py  pyproject.toml
python/maf05_hosted_agents/simplest_maf_agent/: README.md  main.py  requirements.txt
python/maf05_mixed_foundry_v1_and_v2_workflow/: README.md  foundry_agents (REST).py  foundry_agents (azure-ai-agents sdk).py  main.py  pyproject.toml  requirements.txt
python/quick_tests/: 01 - MAF with OpenAI (travelagent).ipynb  02 - MAF with OpenAI and Session (Travelagent, Stateful Conversation).ipynb  03 - MAF with OpenAI (Configuration and Factory Patters, Stateful Conversation).ipynb  05 - MAF with AzureOpenAI and SearchTool.ipynb  10 - FoundryV2 SDK.ipynb  README.md  main.py  pydantic_tests.ipynb  pyproject.toml
(+94 files in other folders)
