[project]
name = "maf04-aifoundry-v1"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "agent-framework-azure-ai==1.0.0b251016",
    "agent-framework-core==1.0.0b251016",
    "agent-framework-devui==1.0.0b251016",
    "azure-ai-agents==1.2.0b5",
    "azure-ai-inference==1.0.0b9",
    "azure-ai-projects==1.0.0b12",
    "python-dotenv>=1.2.1",
]
