[project]
name = "maf05-hosted-agents-echo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "agent-framework>=1.0.0b251216",
    "azure-ai-agentserver-agentframework==1.0.0b7",
    "azure-monitor-opentelemetry==1.8.1",
    "pytest==8.4.2",
    "python-dotenv==1.1.1",
]
