[project]
name = "maf05-mixed-foundry-v1-and-v2-workflow"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "agent-framework>=1.0.0rc3",
    "agent-framework-azure-ai>=1.0.0rc3",
    "azure-ai-projects>=2.0.0b4",
    "azure-identity>=1.26.0b2",
    "python-dotenv>=1.2.2",
]
