[project]
name = "quick-tests"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "agent-framework>=1.2.0",
    "agent-framework-azure-ai>=1.0.0rc6",
    "azure-ai-projects>=2.1.0",
    "azure-identity>=1.26.0b2",
    "jupyter>=1.1.1",
    "python-dotenv>=1.2.2",
]
