[project]
name = "simplest-maf-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "agent-framework>=1.0.0b251218",
    "azure-ai-agentserver-agentframework==1.0.0b7",
    "azure-identity>=1.26.0b1",
    "python-dotenv>=1.2.1",
]
